# httpserver/controllers/user_controller.go
@@ -1,10 +1,12 @@
 package controllers
 
 import (
+	"errors"
 	"final-project-2/httpserver/dto"
 	"final-project-2/httpserver/models"
 	"final-project-2/httpserver/services"
 	"final-project-2/utils"
+	"fmt"
 	"net/http"
 
 	"github.com/gin-gonic/gin"
@@ -15,16 +17,18 @@ type UserController interface {
 	Register(ctx *gin.Context)
 	Login(ctx *gin.Context)
 	GetUsers(ctx *gin.Context)
+	UpdateUser(ctx *gin.Context)
+	DeleteUser(ctx *gin.Context)
 }
 
 type userController struct {
 	userService services.UserService
-	authService services.AuthService
+	authService utils.AuthHelper
 }
 
 func NewUserController(
 	userService services.UserService,
-	authService services.AuthService,
+	authService utils.AuthHelper,
 ) *userController {
 	return &userController{userService, authService}
 }
@@ -32,27 +36,18 @@ func NewUserController(
 // Register godoc
 // @Tags    User
 // @Summary create a user
-// @Param   user body     dto.RegisterDto true "Create User DTO"
-// @Success 201  {object} utils.HttpSuccess[dto.RegisterDto]
+// @Param   user body     dto.UpsertUserDto true "Create User DTO"
+// @Success 201  {object} utils.HttpSuccess[dto.UpsertUserDto]
 // @Failure 400  {object} utils.HttpError
 // @Failure 500  {object} utils.HttpError
 // @Router  /user/register [post]
 func (c *userController) Register(ctx *gin.Context) {
-	var dto dto.RegisterDto
+	var dto dto.UpsertUserDto
 	err := ctx.BindJSON(&dto)
 	if err != nil {
 		ctx.JSON(http.StatusBadRequest, utils.NewHttpError("Bad Request", err.Error()))
 		return
 	}
-
-	hashedPassword, err := bcrypt.GenerateFromPassword([]byte(dto.Password), bcrypt.DefaultCost)
-
-	if err != nil {
-		ctx.JSON(http.StatusInternalServerError, utils.NewHttpError("Internal Server Error", err.Error()))
-		return
-	}
-
-	dto.Password = string(hashedPassword)
 
 	_, err = c.userService.Register(&dto)
 
@@ -118,10 +113,73 @@ func (c *userController) Login(ctx *gin.Context) {
 // @Security BearerAuth
 func (c *userController) GetUsers(ctx *gin.Context) {
 	users, err := c.userService.GetUsers()
+
 	if err != nil {
 		ctx.JSON(http.StatusInternalServerError, utils.NewHttpError("Internal Server Error", err.Error()))
 		return
 	}
 
 	ctx.JSON(http.StatusOK, utils.NewHttpSuccess("Get All Success", users))
+}
+
+// UpdateUser godoc
+// @Tags    User
+// @Summary create a user
+// @Param   user body     dto.UpsertUserDto true "Update User Based On Token"
+// @Success 200  {object} utils.HttpSuccess[dto.UpsertUserDto]
+// @Failure 400  {object} utils.HttpError
+// @Failure 500  {object} utils.HttpError
+// @Router   /user [put]
+// @Security BearerAuth
+func (c *userController) UpdateUser(ctx *gin.Context) {
+	var dto dto.UpsertUserDto
+	err := ctx.BindJSON(&dto)
+
+	if err != nil {
+		ctx.JSON(http.StatusBadRequest, utils.NewHttpError("Bad Request", err.Error()))
+		return
+	}
+
+	userCredential, isExist := ctx.Get("user")
+
+	if !isExist {
+		ctx.JSON(http.StatusBadRequest, utils.NewHttpError("Bad Request", errors.New("invalid credential")))
+		return
+	}
+
+	userModel := userCredential.(models.UserModel)
+	_, err = c.userService.UpdateUser(&dto, &userModel)
+	if err != nil {
+		ctx.JSON(http.StatusInternalServerError, utils.NewHttpError("Internal Server Error", err.Error()))
+		return
+	}
+
+	ctx.JSON(http.StatusOK, utils.NewHttpSuccess("Update User Success", dto))
+}
+
+// DeleteUser godoc
+// @Tags    User
+// @Summary delete current user based on JWT
+// @Success 200  {object} utils.HttpSuccess[dto.UpsertUserDto]
+// @Failure 400  {object} utils.HttpError
+// @Failure 500  {object} utils.HttpError
+// @Router   /user [delete]
+// @Security BearerAuth
+func (c *userController) DeleteUser(ctx *gin.Context) {
+
+	userCredential, isExist := ctx.Get("user")
+	userModel := userCredential.(models.UserModel)
+
+	if !isExist {
+		ctx.JSON(http.StatusBadRequest, utils.NewHttpError("Bad Request", errors.New("invalid credential")))
+		return
+	}
+
+	_, err := c.userService.DeleteUser(&userModel)
+	if err != nil {
+		ctx.JSON(http.StatusInternalServerError, utils.NewHttpError("Internal Server Error", err.Error()))
+		return
+	}
+	message := fmt.Sprintf("User ID %d has been deleted", userModel.ID)
+	ctx.JSON(http.StatusOK, utils.NewHttpSuccess(message, struct{}{}))
 }
