# httpserver/dto/user_dto.go
@@ -1,14 +1,10 @@
 package dto
 
-type CreateTodoDto struct {
-	Name string `json:"name" binding:"required"`
-}
-
 type UpdateTodoDto struct {
 	Status bool `json:"status" binding:"required"`
 }
 
-type RegisterDto struct {
+type UpsertUserDto struct {
 	Age      uint8  `json:"age" binding:"required"`
 	Email    string `json:"email" binding:"required"`
 	Password string `json:"password" binding:"required"`
