# httpserver/services/user_service.go
@@ -4,18 +4,16 @@ import (
 	"final-project-2/httpserver/dto"
 	"final-project-2/httpserver/models"
 	"final-project-2/httpserver/repositories"
+
+	"golang.org/x/crypto/bcrypt"
 )
 
-type TodoService interface {
-	CreateTodo(dto dto.CreateTodoDto) (models.UserModel, error)
-	DeleteTodo(id uint) error
-	UpdateTodo(inputID int64, inputData dto.UpdateTodoDto) (map[string]string, error)
-}
-
 type UserService interface {
-	Register(dto *dto.RegisterDto) (*models.UserModel, error)
+	Register(dto *dto.UpsertUserDto) (*models.UserModel, error)
 	Login(dto *dto.LoginDto) (*models.UserModel, error)
 	GetUsers() (*[]models.UserModel, error)
+	UpdateUser(dto *dto.UpsertUserDto, user *models.UserModel) (*models.UserModel, error)
+	DeleteUser(user *models.UserModel) (bool, error)
 }
 
 type userService struct {
@@ -26,7 +24,16 @@ func NewUserService(r repositories.UserRepository) *userService {
 	return &userService{r}
 }
 
-func (s *userService) Register(dto *dto.RegisterDto) (*models.UserModel, error) {
+func (s *userService) Register(dto *dto.UpsertUserDto) (*models.UserModel, error) {
+
+	hashedPassword, err := bcrypt.GenerateFromPassword([]byte(dto.Password), bcrypt.DefaultCost)
+
+	if err != nil {
+		return nil, err
+	}
+
+	dto.Password = string(hashedPassword)
+
 	user := models.UserModel{
 		Username: dto.Username,
 		Email:    dto.Email,
@@ -34,7 +41,7 @@ func (s *userService) Register(dto *dto.RegisterDto) (*models.UserModel, error) 
 		Age:      dto.Age,
 	}
 
-	_, err := s.userRepository.Register(&user)
+	_, err = s.userRepository.Register(&user)
 	if err != nil {
 		return &user, err
 	}
@@ -54,6 +61,41 @@ func (s *userService) Login(dto *dto.LoginDto) (*models.UserModel, error) {
 	return &user, nil
 }
 
+func (s *userService) UpdateUser(dto *dto.UpsertUserDto, user *models.UserModel) (*models.UserModel, error) {
+
+	hashedPassword, err := bcrypt.GenerateFromPassword([]byte(dto.Password), bcrypt.DefaultCost)
+
+	if err != nil {
+		return nil, err
+	}
+
+	dto.Password = string(hashedPassword)
+
+	userModel := models.UserModel{
+		BaseModel: user.BaseModel,
+		Username:  dto.Username,
+		Email:     dto.Email,
+		Age:       dto.Age,
+		Password:  dto.Password,
+	}
+
+	user, err = s.userRepository.UpdateUser(&userModel)
+
+	if err != nil {
+		return user, err
+	}
+
+	return user, nil
+}
+
 func (s *userService) GetUsers() (*[]models.UserModel, error) {
 	return s.userRepository.GetUsers()
+}
+
+func (s *userService) DeleteUser(user *models.UserModel) (bool, error) {
+	_, err := s.userRepository.DeleteUser(user)
+	if err != nil {
+		return false, err
+	}
+	return true, nil
 }
